import("//build/lite/config/component/lite_component.gni")
lite_component("softbus_discovery") {
  features = [ ":softbusDiscovery" ]
}
executable("softbusDiscovery") {
  output_name = "softbusDiscovery"
  sources = [ "softbus_discovery.c" ]
  deps=["//foundation/communication/dsoftbus:dsoftbus",]
  include_dirs = [
    "//foundation/communication/dsoftbus/interfaces/kits/discovery",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "//foundation/communication/dsoftbus/interfaces/kits/common",
    "//foundation/communication/dsoftbus/interfaces/kits/bus_center",
    "//foundation/communication/dsoftbus/components/nstackx/nstackx_ctrl/interface"
  ]
  defines = []
  cflags_c = []
  ldflags = []
}